@@ -1,10 +1,11 @@
 package com.base_student.student.service;
 
-import java.util.List;
 import org.springframework.stereotype.Service;
+import java.util.List;
+import java.util.stream.Collectors;
 
-import com.base_student.student.StudentModel;
 import com.base_student.student.dto.StudentDto;
+import com.base_student.student.StudentModel;
 import com.base_student.student.repository.StudentRepository;
 
 @Service
@@ -17,7 +18,23 @@ public class StudentService {
     }
 
     public List<StudentDto> findAll() {
-        return studentRepository.findAll().stream().map(StudentModel::toDto).toList();
+        List<StudentModel> students = studentRepository.findAll();
+        // Convertimos la lista de modelos a lista de DTOs
+        return students.stream()
+                .map(StudentModel::toDto)
+                .collect(Collectors.toList());
+    }
+
+    public StudentDto save(StudentDto studentDto) {
+        StudentModel student = studentDto.toModel();
+        StudentModel savedStudent = studentRepository.save(student);
+        return savedStudent.toDto();
+    }
+
+    public void deleteById(Integer id) {
+        if (!studentRepository.existsById(id)) {
+            throw new RuntimeException("Estudiante no encontrado con el ID: " + id);
+        }
+        studentRepository.deleteById(id);
     }
 }
-
